--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul class="navigation">
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    
                 </ul>
             </div>
             
@@ -38,7 +38,7 @@
 </div>
 
 <div class="button-padding">
-    <button class="about-button">About Me</button>
+    <a href="#about"><button class="about-button" id="about-button" >About Me</button></a>
 </div>
 
 
