added email icon

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <a href="https://github.com/JZOnTheGit" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/github.png" alt="Github" class="social-icon"> </a>
         <a href="https://www.instagram.com/__jainesh__" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/instagram.png" alt="Instagram" class="social-icon"> </a>
         <a href="https://www.twitter.com/JZ_On_Top" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/X-social.png" alt="Twitter" class="social-icon"> </a>
+        <a href="mailto:jass150505@gmail.com" style="text-decoration: none;"><img src="./images/social_icons/EmailIcon.png" alt="Email" class="social-icon"> </a>
  
         </div>
 </div>
