Made stack images responsive to window size

--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@
 
 
 <div class="stackImagesC">
+   
     <div class="StackImagesM">
-        <img src = 'images/PythonIcon.png'>
-        <img src = 'images/cSharpiCON.png'>
-        <img src = 'images/htmlIcon.png'>
-        <img src = 'images/CSSicon.png'>
-        <img src = 'images/JSicon.png'>
-        <img src = 'images/unityIcon.png'>
-        <img src = 'images/d.jsLogo-removebg-preview.png'>
+        <img class="SingleStackImages" src = 'images/PythonIcon.png'>
+        <img class="SingleStackImages" src = 'images/cSharpiCON.png'>
+        <img class="SingleStackImages" src = 'images/htmlIcon.png'>
+        <img class="SingleStackImages" src = 'images/CSSicon.png'>
+        <img class="SingleStackImages" src = 'images/JSicon.png'>
+        <img class="SingleStackImages" src = 'images/unityIcon.png'>
+        <img class="SingleStackImages" src = 'images/d.jsLogo-removebg-preview.png'>
 
     </div>
+
+
     
 
 </div>
