--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     
     <title>Portfolio</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-REH4188X2L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-REH4188X2L');
+</script>
+
 <body>
 
 <nav>
