--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </nav>
 
 <div class="header"></div>
-    <p class="heading">I'm Jainesh Singh, a Software Engineer Student</p>
+    <p class="heading">I'm Jasstej Singh, a Software Engineer Student</p>
     <p class="dot">.</p>
 </div>
 
@@ -85,7 +85,7 @@
         </div>
     
     <div class="about-content">
-        <p>My name is Jainesh Singh and im a Software Engineering Student. <br><br> In the past years i have dabbled in all sorts of projects and hobbies such as, Starting a "YouTube" channel, Gaming professionally, Coaching in multiple games, and many other aspects of Online Activities.<br> I have experience in Programming for around 5 years and 3 of those i have experience in Game Development using engines like Unity. <br><br> As of early 2024, i am currently a Software Engineering Student and am planning to get a Bachelor Degree then a Masters and maybe a PhD, depending on what im doing after a few years. <br> I have created a few projects which will be listed below and many on Public on my "Github" page.</p>
+        <p>My name is Jasstej Singh and im a Software Engineering Student. <br><br> In the past years i have dabbled in all sorts of projects and hobbies such as, Starting a "YouTube" channel, Gaming professionally, Coaching in multiple games, and many other aspects of Online Activities.<br> I have experience in Programming for around 5 years and 3 of those i have experience in Game Development using engines like Unity. <br><br> As of early 2024, i am currently a Software Engineering Student and am planning to get a Bachelor Degree then a Masters and maybe a PhD, depending on what im doing after a few years. <br> I have created a few projects which will be listed below and many on Public on my "Github" page.</p>
 
         <a href="https://github.com/JZOnTheGit" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/github.png" alt="Github" class="social-icon"> </a>
         <a href="https://www.instagram.com/__jainesh__" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/instagram.png" alt="Instagram" class="social-icon"> </a>
