New Project Page, updated text content with fixed spelling and grammer, addded 3 old projects, changed project card padding layout

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="button-padding">
-    <button class="about-button" id="about-button" onclick="scrollToAbout()" >About Me</button>
+    <button class="about-button" id="about-button" onclick="scrollToAbout()" >About_Me</button>
 </div>
 
 
@@ -81,7 +81,7 @@
 <div id="about">
 <div class="about-section">
     <div class="about-title">
-        <h3>About Me</h3>
+        <h3>About_Me</h3>
         </div>
     
     <div class="about-content">
@@ -108,7 +108,7 @@
         </div>
     
     <div class="project-content">
-        <p>Projects that i've been working on</p>
+        <p>Projects that I've been working on</p>
 
         </div>
 </div>
@@ -119,7 +119,7 @@
 
         <h3 class="project-title">TikTok Video Upload Date Finder</h3>
 
-        <p class="project-description">This project was started by a user request on "TikTok", it tests my ability to work with binary code and how it can be manipulated to obtain specific data. <br><br> The project works by getting the needed didgits from the "TikTok" URL. <br> Converting them to binary, getting the first 32 didgits of that binary number then converting back to denary. <br> finally converting that denary value to the UNIX Time Code to obtain the exact date the video was uploaded.<br><br> Finally puttting all that into the JavaScript into the website and linking it with the html button then finishing with the css.<br><br> The project can be viewed from the link below, along with the source code on my Github <br><br> <a href="https://ttudf.j-singh.net" target="_blank" style="text-decoration: none;">Project Link</a> / / / <a href="https://github.com/JZOnTheGit/TikTokVideoDate" target="_blank" style="text-decoration: none;">Source Code</a> </p>
+        <p class="project-description">This project was started by a user request on "TikTok", it tests my ability to work with binary code and how it can be manipulated to obtain specific data. <br><br> The project works by getting the needed didgits from the "TikTok" URL. <br> Converting them to binary, getting the first 32 didgits of that binary number then converting back to denary. <br> finally converting that denary value to the UNIX Time Code to obtain the exact date the video was uploaded.<br><br> Finally puttting all that into the JavaScript into the website and linking it with the html button then finishing with the css.<br><br> The project can be viewed from the link below, along with the source code on my Github. <br><br> <a href="https://ttudf.j-singh.net" target="_blank" style="text-decoration: none;">Project Link</a> / / / <a href="https://github.com/JZOnTheGit/TikTokVideoDate" target="_blank" style="text-decoration: none;">Source Code</a> </p>
 
     </div>
 
@@ -143,9 +143,17 @@
 
         <h3 class="project-title">Discord.Js V14.2.0 Multi-Functional Bot (ZETA)</h3>
 
-        <p class="project-description">This project was one of my last bots i developed using discords API (Discord.js V14.2) <br><br> This bot had multiple function and had been updated last in 2022 with slash commands which were recently introduced at the time. <br> The bot could do multple Moderation commands like, ban, kick, unban, mute. Fun commands like, catsay, avatar, 8ball, ping. and many other commands which can be viewed in the source files. <br><br> From previoud bots, i have lerant to integrate multiple APIs like Youtubes and Spotifys. And integradted Databaes like MongoDB and Firebase<br>The bot is curently offline  <br><br> The Source Code can be viewed below.<br><br> <a href="https://github.com/JZOnTheGit/ZETA-DiscordBot" target="_blank" style="text-decoration: none;"> Source Code</a> </p>
+        <p class="project-description">This project was one of my last bots i developed using discords API (Discord.js V14.2) <br><br> This bot had multiple function and had been updated last in 2022 with slash commands which were recently introduced at the time. <br> The bot could do multple Moderation commands like, ban, kick, unban, mute. Fun commands like, catsay, avatar, 8ball, ping. and many other commands which can be viewed in the source files. <br><br> From previoud bots, i have lerant to integrate multiple APIs like Youtubes and Spotifys. And integradted Databaes like MongoDB and Firebase.<br>The bot is curently offline.  <br><br> The Source Code can be viewed below.<br><br> <a href="https://github.com/JZOnTheGit/ZETA-DiscordBot" target="_blank" style="text-decoration: none;"> Source Code</a> </p>
 
     </div>
+
+</div>
+
+<!--ProjectMoreButton-->
+<div class="ProjectBtnPadding">   
+    <div class="ProjectBtn-padding">
+        <button class="ProjectBtn-button" id="ProjectBtn-button" onclick="MoreProjects()" >More_Projects</button>
+    </div>  
 
 </div>
 
