Added sorting algorithms page, sorted some layout issues, made the main name logo clickable, added agorithm section, added secret testing page

--- a/more_projects.html
+++ b/more_projects.html
@@ -30,7 +30,7 @@
     <div class="whole-header">
         <div class="navbar">
             <div class="navbar-left">
-                <span class="name">Jass Singh</span>
+                <span class="name" onclick=Back_Home()>Jass Singh</span>
             </div>
             <div class="navbar-right">
                 <ul class="navigation">
