--- a/testing.html
+++ b/testing.html
@@ -34,7 +34,7 @@
             </div>
             <div class="navbar-right">
                 <ul class="navigation">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     
                     
                 </ul>
