--- a/more_sites.html
+++ b/more_sites.html
@@ -30,7 +30,7 @@
     <div class="whole-header">
         <div class="navbar">
             <div class="navbar-left">
-                <span class="name">Jass Singh</span>
+                <span class="name" onclick=Back_Home()>Jass Singh</span>
             </div>
             <div class="navbar-right">
                 <ul class="navigation">
