--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <!-- Deferred Scripts -->
         <script src="./js/main.js" defer></script>
         <script src="./js/testing.js" defer></script>
+
+        <!-- Favicon -->
+
+        <link rel="icon" href="images/Favicon/favicon.ico">
         
       
     </head>
@@ -113,13 +117,13 @@
 <div class="stackImagesC">
    
     <div class="StackImagesM">
-        <img class="SingleStackImages" src = 'images/PythonIcon.webp'>
-        <img class="SingleStackImages" src = 'images/cSharpiCON.webp'>
-        <img class="SingleStackImages" src = 'images/htmlIcon.webp'>
-        <img class="SingleStackImages" src = 'images/CSSicon.webp'>
-        <img class="SingleStackImages" src = 'images/JSicon.webp'>
-        <img class="SingleStackImages" src = 'images/unityIcon.webp'>
-        <img class="SingleStackImages" src = 'images/d.jsLogo-removebg-preview.webp'>
+        <img class="SingleStackImages" src='images/PythonIcon.webp' alt="Python Icon">
+        <img class="SingleStackImages" src='images/cSharpiCON.webp' alt="C# Icon">
+        <img class="SingleStackImages" src='images/htmlIcon.webp' alt="HTML Icon">
+        <img class="SingleStackImages" src='images/CSSicon.webp' alt="CSS Icon">
+        <img class="SingleStackImages" src='images/JSicon.webp' alt="JavaScript Icon">
+        <img class="SingleStackImages" src='images/unityIcon.webp' alt="Unity Icon">
+        <img class="SingleStackImages" src='images/d.jsLogo-removebg-preview.webp' alt="Discord.js Icon">
 
     </div>
 
@@ -153,11 +157,10 @@
 
     <div class="social_nest">
 
-        <a href="https://github.com/JZOnTheGit" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/github.png" alt="Github" class="social-icon"> </a>
-        <a href="https://www.instagram.com/__jainesh__" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/instagram.png" alt="Instagram" class="social-icon"> </a>
-        <a href="https://www.twitter.com/JZ_On_Top" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/X-social.png" alt="Twitter" class="social-icon"> </a>
-        <a href="mailto:jass150505@gmail.com" target="_blank" style="text-decoration: none;"><img src="./images/social_icons/EmailIcon.png" alt="Email" class="social-icon"> </a>
- 
+        <a href="https://github.com/JZOnTheGit" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/github.png" alt="Github Icon" class="social-icon"> </a>
+        <a href="https://www.instagram.com/__jainesh__" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/instagram.png" alt="Instagram Icon" class="social-icon"> </a>
+        <a href="https://www.twitter.com/JZ_On_Top" target="_blank" style="text-decoration:none"> <img src="./images/social_icons/X-social.png" alt="Twitter Icon" class="social-icon"> </a>
+        <a href="mailto:jass150505@gmail.com" target="_blank" style="text-decoration: none;"><img src="./images/social_icons/EmailIcon.png" alt="Email Icon" class="social-icon"> </a>
 
     </div>
 
