Mobile Ease of view

--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
                     font-size: 30px;
                 }
             }
+
+            @media (max-width: 600px){
+                .whole-header{
+                    padding: 30px 35px;
+            }
+
+            .about-section{
+                    margin: 20px 30px;
+            }
+
+            .project-card-section{
+                    padding: 5px 30px;
+            }
+            .heading-section{
+                    margin: 20px 30px;
+            }
+        }
+
+            
         </style>
         
         <!-- Link to External CSS -->
