--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <span class="name" onclick="Back_Home()">Jass Singh</span>
             </div>
             <div class="navbar-right">
-                <button class="hamburger" onclick="toggleMenu()">
+                <button class="hamburger" aria-label="Navigation Button" onclick="toggleMenu()">
                     <span></span>
                     <span></span>
                     <span></span>
