--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jasstej Singh">
         <meta name="keywords" content="Jasstej Singh, Software Engineer, Software Engineering Portfolio, Web Developer, Game Developer, Python, JavaScript, HTML, CSS, Unity, Open Source Projects, Programming Portfolio">
-        <meta name="description" content="Discover Jasstej Singh's portfolio showcasing web development, Frontend/Backend, and programming in Python, JavaScript, and C#. Explore projects and tech expertise.">
+        <meta name="description" content="Discover Jasstej's portfolio showcasing web development, Front/Backend, and programming in Python, JavaScript, and C#. Explore projects and tech expertise.">
         <meta name="robots" content="index, follow">
         
         <!-- Title -->
@@ -126,7 +126,7 @@
 </nav>
 
 <div class="header"></div>
-    <h1><p class="heading">I'm Jasstej Singh, a Software Engineer</p></h1>
+    <p class="heading"><h1 class="heading">I'm Jasstej Singh, a Software Engineer</h1></p>
     <p class="dot">.</p>
 </div>
 
