Design chnages, Major SEO and performence updates

--- a/algorithms.html
+++ b/algorithms.html
@@ -28,6 +28,7 @@
     
     
     <title>Sorting_algorithm</title>
+    <link rel="canonical" href="https://j-singh.net/algorithms.html" />
 </head>
 
 
