--- a/more_sites.html
+++ b/more_sites.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="icon" href="images/Favicon/favicon.ico">
+    <link rel="canonical" href="https://j-singh.net/more_sites.html" />
     
 
     <script src="./js/main.js"></script>
