social buttons improvement

--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
             <hr class="section-divider">
 
             <section class="social_section" id="social_section" role="complementary" aria-labelledby="linkedin-title">
-                <h2 id="linkedin-title" class="visually-hidden">Social Media Profiles</h2>
+                <div class="heading-title">
+                    <h2 id="linkedin-title">Social Media Profiles</h2>
+                </div>
                 <div class="linkedin-section">
                     <!-- LinkedIn -->
                     <a href="https://uk.linkedin.com/in/jainesh-singh-page" 
