Small Design fixes

--- a/more_projects.html
+++ b/more_projects.html
@@ -50,7 +50,7 @@
 <div>
 <div class="header"></div>
     <p class="heading">More Projects</p>
-    <p class="dot">.</p>
+    <!--<p class="dot">.</p> -->
 </div>
 
 <div class="button-padding">
