added projects and fixed the stat count

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#Web_Dev">Web_Dev</a></li>
+                        <!--<li><a href="#Web_Dev">Web_Dev</a></li>-->
                         <li><a href="#Algorithms">Algorithms</a></li>
                         <li><a href="#GitHub_Activity">GitHub</a></li>
                     </ul>
@@ -368,7 +368,7 @@
                 </div>
                 <div class="heading-content">
                     <p>Projects that I've been working on</p>
-                    <p>Viewing 3 / 7</p>
+                    <p class="project-count">Viewing 3 / ${projectOrder.length}</p>
                 </div>
             </div>
             <div id="projects-container">
@@ -378,7 +378,7 @@
 
         <hr class="section-divider">
 
-        <!--Website Development Section-->
+        <!--Website Development Section
 
         <div id="Web_Dev" aria-label="Web Development Projects">
             <div class="heading-section">
@@ -392,7 +392,7 @@
                     </div>
                 </div>
 
-                <!--Main Portfolio Site-->
+                Main Portfolio Site
                 <div class="project-card-section">
 
                     <div class="project-card">
@@ -405,7 +405,7 @@
                 
                 </div>
 
-                <!--Krem Site-->
+                <Krem Site
                 <div class="project-card-section">
 
                     <div class="project-card">
@@ -418,7 +418,7 @@
                 
                 </div>
 
-                <!--ProjectMoreButton-->
+                ProjectMoreButton
             <div class="ProjectBtnPadding">   
                 <div class="ProjectBtn-padding">
                     <button class="ProjectBtn-button" id="WebsiteBtn-button" onclick="MoreSites()" >More_Websites</button>
@@ -426,7 +426,7 @@
 
             </div>
 
-            <hr class="section-divider" id="Section_divider" onclick="handleHrClick()">
+            <hr class="section-divider" id="Section_divider" onclick="handleHrClick()">-->
 
             <div id="Algorithms" aria-label="Sorting Algorithms Visualized">
                 <div class="heading-section">
