--- a/more_projects.html
+++ b/more_projects.html
@@ -75,20 +75,24 @@
     <!-- Project Statistics -->
     <div class="stats-container">
         <div class="stat-item">
-            <span class="stat-number" data-count="7">0</span>
+            <span class="stat-number" data-count="0">0</span>
             <h4>Total Projects</h4>
         </div>
         <div class="stat-item">
-            <span class="stat-number" data-count="4">0</span>
+            <span class="stat-number" data-count="0">0</span>
             <h4>Web Projects</h4>
         </div>
         <div class="stat-item">
-            <span class="stat-number" data-count="3">0</span>
+            <span class="stat-number" data-count="0">0</span>
             <h4>Game Projects</h4>
         </div>
         <div class="stat-item">
-            <span class="stat-number" data-count="5">0</span>
+            <span class="stat-number" data-count="0">0</span>
             <h4>API Projects</h4>
+        </div>
+        <div class="stat-item">
+            <span class="stat-number" data-count="0">0</span>
+            <h4>AI Projects</h4>
         </div>
     </div>
 
@@ -98,6 +102,7 @@
         <button class="filter-btn" onclick="filterProjects('Web')">Web</button>
         <button class="filter-btn" onclick="filterProjects('Game')">Games</button>
         <button class="filter-btn" onclick="filterProjects('API')">API</button>
+        <button class="filter-btn" onclick="filterProjects('AI')">AI</button>
     </div>
 
     <div id="projects-container">
