changed main content for tab users

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
     </nav>
 
-    <main id="main-content" tabindex="-1">
+    <main tabindex="-1">
         <header>
             <h1 class="heading">I'm Jasstej Singh, a Software Engineer</h1>
             <!--<p class="dot">.</p> -->
@@ -300,6 +300,8 @@
 
         <!--About section-->
 
+        <div id="main-content" tabindex="-1">
+
         <div id="about" aria-labelledby="about-title">
         <div class="about-section">
             <div class="about-title">
@@ -375,7 +377,7 @@
                 <!-- Projects will be loaded here -->
             </div>
         </div>
-
+        </div>
         <hr class="section-divider">
 
         <!--Website Development Section
