page insight fixes

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
     </nav>
 
-    <main tabindex="-1">
+    <main >
         <header>
             <h1 class="heading">I'm Jasstej Singh, a Software Engineer</h1>
             <!--<p class="dot">.</p> -->
