smaller layout shifts

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <hr class="section-divider">
 
         <!--About section-->
-        <main id="main-content" tabindex="-1">
+        
         <div >
 
         <div id="about" aria-labelledby="about-title">
@@ -356,7 +356,7 @@
         <hr class="section-divider">
 
        
-
+        <main id="main-content" tabindex="-1"></main>
         <!--Projects-->
         <div id="projects">
             <div class="heading-section">
