optimization and fixed stats

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
         </noscript>
         
         <!-- Deferred Scripts -->
-        <script src="./js/main.js?v=1.0" defer></script>
+        <script src="js/config.js"></script>
+        <script src="js/main.js" defer></script>
         
         <!-- Web Vitals Monitoring -->
         <script>
