Replaced the github stats which are working a look nice

--- a/index.html
+++ b/index.html
@@ -572,24 +572,18 @@
             </div>
         </div>
         <div class="github-container">
-            <div class="github-stats">
-                <div class="github-stat">
-                    <span class="stat-label">Repositories</span>
-                    <span class="stat-value" id="repo-count">Loading...</span>
-                </div>
-                <div class="github-stat">
-                    <span class="stat-label">Contributions</span>
-                    <span class="stat-value" id="contribution-count">Loading...</span>
-                </div>
-                <div class="github-stat">
-                    <span class="stat-label">Stars</span>
-                    <span class="stat-value" id="stars-count">Loading...</span>
-                </div>
+            <div class="github-stats-cards">
+                <img src="https://github-readme-stats.vercel.app/api?username=JZOnTheGit&show_icons=true&theme=radical" 
+                     alt="GitHub Stats" 
+                     class="github-stat-card" />
+                <img src="https://github-readme-streak-stats.herokuapp.com/?user=JZOnTheGit&theme=radical" 
+                     alt="GitHub Streak Stats" 
+                     class="github-stat-card" />
+                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=JZOnTheGit&layout=compact&theme=radical" 
+                     alt="Top Languages" 
+                     class="github-stat-card" />
             </div>
-            <div class="recent-activity" id="recent-activity">
-                <h4>Recent_Activity</h4>
-                <div class="activity-list">Loading...</div>
-            </div>
+            
         </div>
     </section>
     </div>
