chnaged instagram username and removed unity icon

--- a/index.html
+++ b/index.html
@@ -252,13 +252,7 @@
                     height="50"
                     loading="lazy"
                     decoding="async">
-                <img class="SingleStackImages" 
-                    src='images/unityIcon.webp' 
-                    alt="Unity Icon"
-                    width="50"
-                    height="50"
-                    loading="lazy"
-                    decoding="async">
+                
                 <img class="SingleStackImages" 
                     src='images/d.jsLogo-removebg-preview.webp' 
                     alt="Discord.js Icon"
@@ -458,7 +452,7 @@
                     </a>
                     
                     <!-- Instagram -->
-                    <a href="https://www.instagram.com/__jainesh__" 
+                    <a href="https://www.instagram.com/_jasstej_" 
                        class="linkedin-link" 
                        target="_blank" 
                        rel="noopener noreferrer" 
