minor responsive changes

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <div id="Algorithms" aria-label="Sorting Algorithms Visualized">
                 <div class="heading-section">
                     <div class="heading-title">
-                        <h3>Sorting_Algorithms_Visualized</h3>
+                        <h3>Sorting_Algorithms</h3>
                         </div>
                     
                     <div class="heading-content">
