cashe system change

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
         </style>
         
         <!-- Non-critical CSS -->
-        <link rel="stylesheet" href="css/stylesheet.css" media="print" onload="this.media='all'">
+        <link rel="stylesheet" href="css/stylesheet.css?v=1.1" media="print" onload="this.media='all'">
         <noscript>
-            <link rel="stylesheet" href="css/stylesheet.css">
+            <link rel="stylesheet" href="css/stylesheet.css?v=1.1">
         </noscript>
         
         <!-- Deferred Scripts -->
