--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     
         <header>
             <h1 class="heading">I'm Jasstej Singh, a Software Engineer</h1>
-            <p class="location-subtitle">London, UK | Remote/Willing to relocate</p>
+            <p class="location-subtitle">London, UK | Remote</p>
         </header>
 
         <div class="button-padding">
