button name change on main page under title

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         <div class="button-padding">
             <button class="about-button" id="about-button" onclick="window.location.href='more_projects.html'" aria-label="View all projects">
-                My Work
+                My Projects
             </button>
         </div>
 
